Reemplazo completo de css

--- a/html/juego.html
+++ b/html/juego.html
@@ -14,11 +14,17 @@
   <div id="stageTop">
     <div class="scores-container">
       <span id="user-info"></span>
+      <div id="user-menu" class="user-menu is-hidden">
+        <button id="menu-back">Retour au menu</button>
+        <button id="menu-shop">Voir la boutique</button>
+        <button id="menu-avatar">Changer d'avatar</button>
+      </div>
       <span id="scoreStars">0</span>
       <span id="scoreCoins" class="coins">0</span>
       <span id="level" class="level">Niveau 1</span>
     </div>
     <div class="top-buttons">
+        <button id="btnReadMode" class="btn" disabled>📖</button>
         <button id="btnShop" class="btn">🛍️ Boutique</button>
         <button id="btnLogros" class="btn">🏆 Succès</button>
         <button id="btnLogout" class="btn">🚪 Quitter</button>
