--- a/login.html
+++ b/login.html
@@ -32,6 +32,18 @@
                     <span class="avatar-emoji">🦄</span>
                     <span class="avatar-label">Licorne</span>
                 </button>
+                <button class="avatar-option" type="button" data-avatar-id="gato" data-avatar-name="Gato Mágico" data-avatar-icon="🐱✨" data-avatar-color="#9B8DFF" aria-label="Gato Mágico">
+                    <span class="avatar-emoji">🐱✨</span>
+                    <span class="avatar-label">Gato Mágico</span>
+                </button>
+                <button class="avatar-option" type="button" data-avatar-id="unicornio_estelar" data-avatar-name="Unicornio Estelar" data-avatar-icon="🦄⭐" data-avatar-color="#FFD700" aria-label="Unicornio Estelar">
+                    <span class="avatar-emoji">🦄⭐</span>
+                    <span class="avatar-label">Unicornio Estelar</span>
+                </button>
+                <button class="avatar-option" type="button" data-avatar-id="gaticornio" data-avatar-name="Gaticornio" data-avatar-icon="🐱‍👓" data-avatar-color="#FF8A80" aria-label="Gaticornio">
+                    <span class="avatar-emoji">🐱‍👓</span>
+                    <span class="avatar-label">Gaticornio</span>
+                </button>
                 <button class="avatar-option" type="button" data-avatar-id="renard" data-avatar-name="Renard malicieux" data-avatar-icon="../assets/avatars/renard.svg" data-avatar-color="#ffd6a5" aria-label="Renard malicieux">
                     <span class="avatar-emoji">🦊</span>
                     <span class="avatar-label">Renard</span>
@@ -47,18 +59,6 @@
                 <button class="avatar-option" type="button" data-avatar-id="fraise" data-avatar-name="Fraise pétillante" data-avatar-icon="../assets/avatars/fraise.svg" data-avatar-color="#ffadad" aria-label="Fraise pétillante">
                     <span class="avatar-emoji">🍓</span>
                     <span class="avatar-label">Fraise</span>
-                </button>
-                <button class="avatar-option" type="button" data-avatar-id="pomme" data-avatar-name="Pomme brillante" data-avatar-icon="../assets/avatars/pomme.svg" data-avatar-color="#ffadad" aria-label="Pomme brillante">
-                    <span class="avatar-emoji">🍎</span>
-                    <span class="avatar-label">Pomme</span>
-                </button>
-                <button class="avatar-option" type="button" data-avatar-id="banane" data-avatar-name="Banane rigolote" data-avatar-icon="../assets/avatars/banane.svg" data-avatar-color="#fdffb6" aria-label="Banane rigolote">
-                    <span class="avatar-emoji">🍌</span>
-                    <span class="avatar-label">Banane</span>
-                </button>
-                <button class="avatar-option" type="button" data-avatar-id="ananas" data-avatar-name="Ananas disco" data-avatar-icon="../assets/avatars/ananas.svg" data-avatar-color="#ffd6a5" aria-label="Ananas disco">
-                    <span class="avatar-emoji">🍍</span>
-                    <span class="avatar-label">Ananas</span>
                 </button>
             </div>
         </section>
