Reemplazo completo de css

--- a/html/login.html
+++ b/html/login.html
@@ -18,7 +18,7 @@
 
     <div id="login-container" role="main">
         <div class="login-header">
-            <span class="login-badge">✨ CChoisis ton avatar✨</span>
+            <span class="login-badge">✨ Choisis ton avatar✨</span>
         </div>
 
         <section class="login-section" aria-labelledby="avatar-section-title">
