--- a/html/boutique.html
+++ b/html/boutique.html
@@ -57,20 +57,12 @@
 
     <audio id="buy-sound" src="../assets/sounds/bling.wav"></audio>
 
-<<<<<<< HEAD
     <script src="../js/audioManager.js"></script>
     <script src="../js/avatarData.js"></script>
     <script src="../js/storage.js"></script>
     <script src="../js/boutiqueData.js"></script>
+    <footer class="global-footer" data-app-footer></footer>
     <script src="../js/footer.js"></script>
     <script src="../js/boutique.js"></script>
 </body>
 </html>
-=======
-    <script src="../js/avatarData.js"></script>
-    <script src="../js/storage.js"></script>
-    <script src="../js/boutiqueData.js"></script>
-    <script src="../js/boutique.js"></script>
-</body>
-</html>
->>>>>>> 169cb41 (Reemplazo completo de css)
