--- a/html/login.html
+++ b/html/login.html
@@ -114,6 +114,7 @@
         <span></span><span></span><span></span><span></span>
     </div>
     <script src="../js/audioManager.js"></script>
+    <footer class="global-footer" data-app-footer></footer>
     <script src="../js/avatarData.js"></script>
     <script src="../js/storage.js"></script>
     <script src="../js/footer.js"></script>
