--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0;url=html/login.html">
-    <title>App de Lena</title>
+    <title>Appli de Léna — Redirection</title>
+    <link rel="canonical" href="html/login.html" />
 </head>
 <body>
-    <p> <a href="html/login.html"></a></p>
+    <p>Redirection vers <a href="html/login.html">l'application</a>.</p>
 </body>
 </html>
