V4 antes del cambio

--- a/html/boutique.html
+++ b/html/boutique.html
@@ -55,7 +55,7 @@
         </div>
     </div>
 
-    <audio id="buy-sound" src="../assets/sounds/bling.wav"></audio>
+    <audio id="buy-sound" src="../assets/sounds/correct.wav"></audio>
 
     <script src="../js/audioManager.js"></script>
     <script src="../js/avatarData.js"></script>
