--- a/html/juego.html
+++ b/html/juego.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/juego.css">
     <link rel="stylesheet" href="../css/dictee.css">
+    <link rel="stylesheet" href="../js/ecriture-cursive.css">
+    <link rel="stylesheet" href="../js/abaque-magique.css">
     <link rel="stylesheet" href="../css/ecriture-cursive.css">
     <link rel="stylesheet" href="../css/abaque-magique.css">
     <link rel="stylesheet" href="../css/theme-unicorn.css">
@@ -49,7 +51,7 @@
   </div>
 
   <audio id="audioCorrect" src="../assets/sounds/correct.wav"></audio>
-  <audio id="audioWrong" src="../assets/sounds/error.wav"></audio>
+  <audio id="audioWrong" src="../assets/sounds/wrong.wav"></audio>
   <audio id="audioCoins" src="../assets/sounds/bling.wav"></audio>
 
   <div id="shopModal" class="shop-modal" aria-hidden="true">
@@ -79,8 +81,8 @@
   <script src="../games/mathblitz.js"></script>
   <script src="../games/lecturemagique.js"></script>
   <script src="../games/raisonnement.js"></script>
-  <script src="../games/ecriture-cursive.js"></script>
-  <script src="../games/abaque-magique.js"></script>
+  <script src="../js/ecriture-cursive.js"></script>
+  <script src="../js/abaque-magique.js"></script>
   <script src="../js/audioManager.js"></script>
   <footer class="global-footer" data-app-footer></footer>
   <script src="../js/avatarData.js"></script>
@@ -90,3 +92,4 @@
   <script src="../js/juego.js"></script>
 </body>
 </html>
+
