V6 fondo de pantalla y avatar

--- a/html/juego.html
+++ b/html/juego.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="../css/dictee.css">
     <link rel="stylesheet" href="../js/ecriture-cursive.css">
     <link rel="stylesheet" href="../js/abaque-magique.css">
-    <link rel="stylesheet" href="../css/ecriture-cursive.css">
-    <link rel="stylesheet" href="../css/abaque-magique.css">
     <link rel="stylesheet" href="../css/theme-unicorn.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -50,9 +48,9 @@
     </div>
   </div>
 
-  <audio id="audioCorrect" src="../assets/sounds/correct.wav"></audio>
-  <audio id="audioWrong" src="../assets/sounds/wrong.wav"></audio>
-  <audio id="audioCoins" src="../assets/sounds/bling.wav"></audio>
+  <audio id="audioCorrect" src="../assets/sounds/correct.wav" preload="auto"></audio>
+  <audio id="audioWrong" src="../assets/sounds/wrong.wav" preload="auto"></audio>
+  <audio id="audioCoins" src="../assets/sounds/bling.wav" preload="auto"></audio>
 
   <div id="shopModal" class="shop-modal" aria-hidden="true">
     <div class="shop-modal__dialog" role="dialog" aria-modal="true" aria-labelledby="shopModalTitle">
@@ -92,4 +90,3 @@
   <script src="../js/juego.js"></script>
 </body>
 </html>
-
