--- a/html/login.html
+++ b/html/login.html
@@ -77,6 +77,22 @@
             </div>
         </section>
 
+        <section class="login-section" aria-labelledby="owned-section-title">
+            <header class="section-header">
+                <h2 id="owned-section-title">Mes objets achetés</h2>
+            </header>
+            <div id="owned-cosmetics" class="owned-cosmetics">
+                <div class="owned-group">
+                    <h3 class="owned-title">Avatars possédés</h3>
+                    <div id="owned-avatars" class="owned-list" aria-live="polite"></div>
+                </div>
+                <div class="owned-group">
+                    <h3 class="owned-title">Fonds d’écran (thèmes) possédés</h3>
+                    <div id="owned-backgrounds" class="owned-list" aria-live="polite"></div>
+                </div>
+            </div>
+        </section>
+
         <section class="login-section" aria-labelledby="name-section-title">
            <div class="name-input-wrapper">
                 <span class="name-icon" aria-hidden="true">📝</span>
