--- a/html/juego.html
+++ b/html/juego.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-  <audio id="audioCorrect" src="../assets/sounds/correct.wav" preload="auto"></audio>
-  <audio id="audioWrong" src="../assets/sounds/wrong.wav" preload="auto"></audio>
-  <audio id="audioCoins" src="../assets/sounds/bling.wav" preload="auto"></audio>
+  <audio id="audioCorrect" src="../assets/sounds/correct.wav" preload="metadata"></audio>
+  <audio id="audioWrong" src="../assets/sounds/bling.wav" preload="metadata"></audio>
+  <audio id="audioCoins" src="../assets/sounds/bling.wav" preload="metadata"></audio>
 
   <div id="shopModal" class="shop-modal" aria-hidden="true">
     <div class="shop-modal__dialog" role="dialog" aria-modal="true" aria-labelledby="shopModalTitle">
