--- a/html/grande-aventure-mots/trouve-le-mot/niveau1/index.html
+++ b/html/grande-aventure-mots/trouve-le-mot/niveau1/index.html
@@ -120,6 +120,7 @@
           ]
     };
   </script>
+  <script src="../../common.js"></script>
   <script src="../level.js"></script>
 </body>
 </html>
