--- a/html/grande-aventure-mots/trouve-le-mot/niveau8/index.html
+++ b/html/grande-aventure-mots/trouve-le-mot/niveau8/index.html
@@ -57,6 +57,7 @@
           ]
     };
   </script>
+  <script src="../../common.js"></script>
   <script src="../level.js"></script>
 </body>
 </html>
