--- a/html/juego.html
+++ b/html/juego.html
@@ -135,6 +135,8 @@
   <script src="../games/tempshorloges.js"></script>
   <script src="../games/tablesdefi.js"></script>
   <script src="../games/seriesnumeriques.js"></script>
+  <script src="../games/emotions.js"></script>
+  <script src="../games/mesuresmagiques.js"></script>
     <script src="../js/ecriture-cursive.js"></script>
   <script src="../js/abaque-magique.js"></script>
   <script src="../js/audioManager.js"></script>
@@ -185,7 +187,6 @@
           { label: 'Mots-Outils', emoji: 0x1F5E3 },
           { label: 'Jeu des Voyelles', emoji: 0x1F170 },
           { label: 'Dictée Magique', emoji: 0x270D },
-          { label: 'La Grande Aventure des Mots', emoji: 0x1F7E3 }
         ]
       },
       {
